Class-Provisioner/main.tf
terraform {
    required_providers {
        aws = {
            source = "hashicorp/aws"
            version = "~> 6.0"
        }
    }
}

# Configure the AWS Provider
provider "aws" {
    region = "us-east-1"
}

resource "aws_key_pair" "hello" {
  key_name   = "my-bastion-key"
  public_key = file("~/.ssh/id_rsa.pub")
  
}

resource "aws_instance" "web" {
  ami           = "ami-0236922087fa98b6e"
  instance_type = "t2.micro"
  key_name = aws_key_pair.hello.key_name
  vpc_security_group_ids = [aws_security_group.allow_tls.id]

connection {
type        = "ssh"
user        = "ec2-user"
private_key = file("~/.ssh/id_rsa")
host        = self.public_ip
}

  provisioner "remote-exec" {
    inline = [
        "sudo yum install httpd -y", 
        "sudo systemctl start httpd",
        "sudo systemctl enable httpd"
    ]
  }
  }
